fix bottom spacing for "Email Me" Button

--- a/css/main.css
+++ b/css/main.css
@@ -3611,6 +3611,7 @@ html.no-csstransitions .home-content__main {
  * ------------------------------------------------------------------- */
 .s-download {
   padding-top: 18.4rem;
+  padding-bottom: 10rem;
   background-color: #5b4f96;
   color: rgba(255, 255, 255, 0.8);
   overflow: hidden;
